# ssl-sim

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  format.sh  format.sh~
cmake/: Utils.cmake
src/: api.txt  ball.h  colors.h  draw.cpp  draw.h  field.c  field.h  glfw_main.cpp  glutils.h  gui_main.cpp  main-cli.cpp  main-gui.cpp  main.c  main.cc  net.h  robot.h  robot.h~  serialize.cpp  serialize.h  sslsim (cópia).cpp  sslsim.cc  sslsim.cpp  sslsim.cpp~  sslsim.h  sslsim2.cpp  team.h  test_headers.c  ugly_test.cpp  vector.h  vector.h~  world.h  world.h~
src/drawsupport/: CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  GLDebugDrawer.cpp  GLDebugFont.cpp  GLFWDemoApplication.h  GL_ShapeDrawer.cpp  GL_ShapeDrawer.h  draw.cpp  draw.h  glfwstuff.cpp  glfwstuff.h  glutils.h  imconfig.h  imgui.cpp  imgui.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
src/imgui/: CMakeLists.txt
src/openglsupport/: CMakeLists.txt  GlutStuff.cpp
src/utils/: angle.hh  gl.h  math.hh  net.c  net.cpp  net.h  stack_vector.h  stack_vector.hh
